Fixed bottomsheet email spacing issue

--- a/react_webviews/src/external_portfolio/components/Style.scss
+++ b/react_webviews/src/external_portfolio/components/Style.scss
@@ -421,4 +421,6 @@ $light_periwinkle: #d3dbe4;
   font-size: 15px;
   line-height: 24px;
   color: var(--secondary);
+  display: inline-block;
+  margin-bottom: 10px;
 }
